--- a/index.html
+++ b/index.html
@@ -12,3 +12,24 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
+<body>
+    <header>
+        <h1>Awesome Startup Employee Directory</h1>
+    </header>
+
+    <main class="grid-container">
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <!-- add 11 copies here -->
+    </main>
+        
+
+
+</body>
+    
