--- a/index.html
+++ b/index.html
@@ -26,6 +26,86 @@
                 <p class="address">Chicago</p>
             </div>
         </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="avatar" src="member-1.jpg" />
+            <div class="text-container">
+                <h2 class="name">Haleigh Macchiarella</h2>
+                <p class="email">dtucker@yakitri.edu</p>
+                <p class="address">Chicago</p>
+            </div>
+        </div>
         <!-- add 11 copies here -->
     </main>
         
