--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     </main>
 
-    <!-- overlay of the modal -->
+    <!-- modal window that pops up -->
     <div class="overlay hidden">
         <div class="modal"><button class="modal-close">X</button>
             <div class="modal-content">
@@ -120,6 +120,7 @@
                     <h2 class="name">Haleigh Macchiarella</h2>
                     <p class="email">dtucker@yakitri.edu</p>
                     <p class="address">Chicago</p>
+                    <!-- <hr />: The Thematic Break (Horizontal Rule) element (line) -->
                     <hr />
                     <p>(593) 364-3249</p>
                     <p class="address">123 Anywhere St, WV 84814</p>
