--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
     <header>
         <h3>Awesome Startup Employee Directory</h3>
+        <div id="searchContainer">
+            <input type="text" placeholder="Search" id="searchField">
+        </div>
     </header>
 
     <main class="grid-container">
