Added forward/Back buttons to modal

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                     <p>(593) 364-3249</p>
                     <p class="address">123 Anywhere St, WV 84814</p>
                     <p>Birthday: 01/04/85</p>
+                    <button id="arrow_back">&lt; Back</button>  
+                    <button id="arrow_next">Next &gt;</button>  
                 </div>
             </div>
         </div>
