--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <header>
-        <h3>Awesome Startup Employee Directory</h3>
+        <div id="pageName">
+            <h3>Awesome Startup Employee Directory</h3>
+        </div>
         <div id="searchContainer">
             <input type="text" placeholder="Search" id="searchField">
         </div>
