Cleaned up errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="grid-container">
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="avatar" src="member-1.jpg" />
+            <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
             <div class="text-container">
                 <h2 class="name">Haleigh Macchiarella</h2>
                 <p class="email">dtucker@yakitri.edu</p>
@@ -120,13 +120,13 @@
         <div class="modal"><button class="modal-close">X</button>
             <div class="modal-content">
             <!-- modal information will be added with JS here -->
-                <img class="avatar" src="member-1.jpg" />
+                <img class="avatar" alt="Profile image of Haleigh Macchiarella" src="member-1.jpg">
                 <div class="text-container">
                     <h2 class="name">Haleigh Macchiarella</h2>
                     <p class="email">dtucker@yakitri.edu</p>
                     <p class="address">Chicago</p>
-                    <!-- <hr />: The Thematic Break (Horizontal Rule) element (line) -->
-                    <hr />
+                    <!-- <hr>: The Thematic Break (Horizontal Rule) element (line) -->
+                    <hr>
                     <p>(593) 364-3249</p>
                     <p class="address">123 Anywhere St, WV 84814</p>
                     <p>Birthday: 01/04/85</p>
@@ -137,8 +137,8 @@
         </div>
     </div>
 
-
+    <script src="JS/app.js"></script>
 </body>
 
-<script src="JS/app.js"></script>
+
     
